<resources>
    <string name="app_name">PurpleSQ</string>

    <string name="title_activity_Home">Purple Squirrel</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_login">Sign in </string>
    <string name="title_activity_participants">Participants</string>
    <string name="title_activity_payment">Confirm</string>
    <string name="title_activity_payment_status">PaymentStatusActivity</string>
    <string name="title_fragment_invoice_details">Invoice</string>
    <string name="title_activity_cod">CodActivity</string>

    <string name="title_leftdrawer_events">Events</string>
    <string name="title_leftdrawer_invoices">Invoices</string>
    <string name="title_leftdrawer_queries">Queries</string>
    <string name="title_leftdrawer_rateus">Rate Us</string>
    <string name="title_leftdrawer_help">Help</string>
    <string name="title_leftdrawer_tnc">Terms and Conditions</string>
    <string name="title_leftdrawer_settings">Settings</string>
    <string name="title_leftdrawer_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>


    <string name="content_des">Image</string>


    <!-- Strings related to social login -->
    <string name="plus_sign_out">Switch Google+ account </string>
    <string name="plus_disconnect">Disconnect from Google+ </string>


    <string name="prompt_name">Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_phoneno">Phone No (Optional)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_coupon">Have a coupon?</string>
    <string name="prompt_pincode">Pincode</string>
    <string name="prompt_city">City</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_landmark">Landmark (Optional)</string>
    <string name="prompt_spinner">Select State</string>

    <string name="action_sign_in_short">Sign in </string>
    <string name="error_invalid_email">This email address is invalid </string>
    <string name="error_invalid_phoneno">Phone number should be between 10-13. Numeric and \'+\' allowed. </string>
    <string name="error_invalid_password">This password is too short </string>
    <string name="error_incorrect_password">This password is incorrect </string>
    <string name="error_password_does_not_match">Passwords do not match each other </string>
    <string name="error_field_required">This field is required </string>
    <string name="event_details_overview">Overview</string>
    <string name="event_details_features">Features</string>
    <string name="event_details_itinerary">Itinerary</string>
    <string name="event_details_what_you_get">What you get</string>
    <string name="event_details_faq">FAQ</string>
    <string name="event_details_queries">QUERIES? CALL US!</string>


    <string-array name="states" >
        <item>Andaman and Nicobar Island</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

</resources>
